# batteryOverlay-c

./: .gitignore  BatteryOverlayC++开发笔记.md  CMakeLists.txt  apply_changes.py  main.cpp  modify_for_v2050.py  ntp_sync.cpp  ntp_sync.h
.github/workflows/: build.yml
.workbuddy/memory/: 2026-05-03.md
res/: app.manifest  app.rc  resource.h
